sql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    component: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      component: db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        component: db
    spec:
      containers:
      - args:
        - --transaction-isolation=READ-COMMITTED
        - --binlog-format=ROW
        - --max-connections=1000
        image: mariadb:latest
        name: db
        ports:
        - containerPort: 3306
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: db-persistent-storage
      restartPolicy: Always
      volumes:
      - name: db-persistent-storage
        persistentVolumeClaim:
          claimName: db-pvc
---
apiVersion: v1
kind: Service
metadata:
  labels:
    component: db
  name: db
spec:
  ports:
  - port: 3306
  selector:
    component: db
